src/objects/Defect__c.object
<CustomObject>
    <description>PMO: for testing app, tracking develop bug.
Responsible person：Samuel Liu</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Category__c</fullName>
        <label>Defect Category</label>
        <picklist>
            <picklistValues>
                <fullName>System Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not fulfill requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_description__c</fullName>
        <label>Defect description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detected_in_Cycle__c</fullName>
        <label>Detected in Cycle</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detected_in_Release__c</fullName>
        <label>Detected in Release</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detected_in_Version__c</fullName>
        <label>Detected in Version</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detected_on_Date__c</fullName>
        <label>Detected on Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1-Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_step1__c</fullName>
        <label>Test step1</label>
        <referenceTo>Test_step1__c</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Defect#{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>